--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Fundamentos visuales</h1>
-    <a href="https://vis97c.github.io/Presentacion-Comp-Visual/semana_2_1_descomponiendo_pipeline_grafico/Threejs/index.html">Demo</a>
+    <a href="/Presentacion-Comp-Visual/semana_2_1_descomponiendo_pipeline_grafico/Threejs/index.html">Demo</a>
 </body>
 </html>
